index.css
/* Set layout for all screens */
* {
  box-sizing: border-box;
  font-family: 'Roboto', sans-serif;
}

body, html {
  height: 100%;
}

body {
  background-image: url('images/planet-express-background.jpg');
  background-position: center;
  background-attachment: fixed;
  background-size: cover;
  background-repeat: no-repeat;
  font-size: 18px;  
}

header {
  text-align: center;
  color: white;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.quiz-container {
  width: 840px;
  height: 240px;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  padding: 20px;
  margin: 0 auto;
  background-color: white;
  border: 1px solid black;
  border-radius: 20px;
}

.quiz-image {
  width: 200px;
  height: 200px;
  border: 1px solid black;
  border-radius: 15px;
}

.quiz-text-container {
  width: 400px;
  padding-left: 20px;
  padding-right: 20px;
  display: flex;
  flex-direction: column;
}

.quiz-text p {
  margin: 0;
}

.answer {
  text-align: center;
  font-weight: bold;
  font-size: 20px;
}

.quiz-options fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

.quiz-options input {
  margin-left: 0;
  margin-right: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

/* Get progress and score to display on same line, at left and right sides */
.quiz-info-container {
  flex: 1;
  position: relative;  
}

.answer-status-correct {
  position: absolute;
  top: 0;
  width: 100%;
  text-align: center;
  font-size: 20px;
  background-color: lightgreen;
}

.answer-status-incorrect {
  position: absolute;
  top: 0;
  width: 100%;
  text-align: center;
  font-size: 20px;
  background-color: lightcoral;
}

.quiz-progress, .quiz-score {
  display: inline;
  margin: 0;
}

.quiz-progress {  
  position: absolute;
  left: 0;
  bottom: 0;
}

.quiz-score {
  position: absolute;
  right: 0;
  bottom: 0;
}

.quiz-button {
  width: 200px;
  height: 200px;
  border: 1px solid black;
  border-radius: 10px;
  font-size: 30px;
}

.quiz-button:hover {
  box-shadow: 0 0 11px rgba(0,0,0,.4);
}

/* Set layout for small screen */
@media screen and (max-width: 459px) {
  body {
    font-size: 15px;
  }
  /* Set container size to grow/shrink with viewport*/
  .quiz-container {
    width: 304px;
    height: 377px;
    padding: 10px;
    position: relative;
    flex-direction: column;
  }

  .quiz-image {
    width: 137px;
    height: 137px;
    position: absolute;
    top: 10px;
    left: 10px;
  }

  .quiz-text-container {
    width: 280px;
    height: 200px;
    padding: 0;
    position: absolute;
    bottom: 20px;
  }

  .quiz-button {
    width: 137px;
    height: 137px;
    position: absolute;
    top: 10px;
    right: 10px;
    font-size: 25px;
  }
}

/* Set layout for medium screen */
@media screen and (max-width: 839px) and (min-width: 460px) {
  .quiz-container {
    width: 460px;
    height: 460px;
    position: relative;
    flex-direction: column;
  }

  .quiz-image {
    position: absolute;
    top: 20px;
    left: 20px;
  }

  .quiz-text-container {
    width: 420px;
    height: 200px;
    padding: 0;
    position: absolute;
    bottom: 20px;
  }

  .quiz-button {
    position: absolute;
    top: 20px;
    right: 20px;
    
  }
}

